--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
                 <input class="input" type="search" id="search-content" name="q" placeholder="Search"
                     oninput="searchPage(this)">
             </div>
-            <div class="control">
+            <!-- <div class="control">
                 <a class="button is-info">
                     Search
                 </a>
-            </div>
+            </div> -->
         </div>
 
         <table class="table" id="episodes">
