fixed nav reference

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <nav id="top" class="tabs">
         <ul>
             <li>
-                <a class="has-text-white" href="#table">Episodes</a>
+                <a class="has-text-white" href="#episodes">Episodes</a>
             </li>
             <li>
                 <a class="has-text-white" href="#about">About</a>
