about section update

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,9 @@
                     Time
                     Lord supercomputer that contains information
                     on
-                    almost all known history in the universe, which allows prediction of future events.
+                    almost all known history in the universe, which allows prediction of future events. This Matrix of
+                    Time contains every episode of Doctor Who since the 2005 reboot, and stores user ratings and
+                    comments.
                 </p>
             </div>
         </section>
