created comment section

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
             <li>
                 <a class="has-text-white" href="#about">About</a>
             </li>
+            <li>
+                <a class="has-text-white" href="#commentsection">Comments</a>
+            </li>
         </ul>
     </nav>
     <!--ENDNAVBAR-->
@@ -84,6 +87,14 @@
                 </p>
             </div>
         </section>
+
+        <!--COMMENTS-->
+        <section class="content">
+            <h3 class="has-text-white">Recent Comments</h3>
+            <div id="commentsection" class="box">
+
+            </div>
+        </section>
         <!--ENDABOUT-->
 
         <div>
@@ -127,7 +138,7 @@
 
             <footer class="modal-card-foot">
                 <!--SAVECLOSEBUTTONS-->
-                <button onclick="submitForm()" class="button is-success">Save changes</button>
+                <button onclick="submitForm()" class="button is-success">Submit</button>
                 <button onclick="toggleModal()" class="button">Cancel</button>
             </footer>
 
@@ -140,7 +151,7 @@
 </body>
 
 <footer class="footer has-background-black">
-    Anna Marie Laffoon
+    AM Laffoon 2022
 </footer>
 
 </html>
